# HelloPiCmake

./: .gitignore  CMakeLists.txt  CleanProject.bat  RemoveBuildDir.bat  RunCMake-Debug.bat  RunCMake-Release.bat  RunCMake.bat  ScpToPi-Debug.bat  ScpToPi-Release.bat  buildProject-Debug.bat  buildProject-Release.bat  buildProject.bat  cleanProject-Debug.bat  cleanProject-Release.bat  genMakeFile.bat  scpToPi.bat
HardwareControl/CMP_ELF_HardwareControl/: CMakeLists.txt
HardwareControl/src/: main.cpp
Logger/: CMakeLists.txt  buildProject.bat  main.cpp  scpToPi.bat
Logger/CMP_ELF_Logger/: CMakeLists.txt
Logger/CMP_LIB_LoggerClient/: CMakeLists.txt
Logger/clientFolder/: CLoggerClient.cpp  CLoggerClient.h  CMakeLists.txt
Logger/src/: main.cpp
Logger/src/clientFolder/: CLoggerClient.cpp
Logger/src/subfolder1/: CMakeLists.txt  CWriter3.cpp
Logger/subfolder1/: CMakeLists.txt  CWriter3.cpp  CWriter3.h
Utilities/: CMakeLists.txt
Utilities/CMP_LIB_Utilities/: CMakeLists.txt
Utilities/folder1/: CMakeLists.txt  CWriter1.cpp
Utilities/folder2/: CWriter2.h  Calc.c  Calc.h
Utilities/src/folder1/: CWriter1.cpp
Utilities/src/folder2/: CMakeLists.txt  CWriter2.cpp
lib/: CMakeLists.txt
lib/folder1/: CMakeLists.txt  CWriter1.cpp  CWriter1.h
lib/folder2/: CMakeLists.txt  CWriter2.cpp  CWriter2.h  Calc.c  Calc.h
main/: CMakeLists.txt  genMakeFile.bat  main.cpp  scpToPi.bat
main/subfolder1/: CWriter3.cpp
